# jsonref

./: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README  README.md  README.rst  jsonref.py  lazyloadproxy.py  lazyproxy.py  proxytypes.py  pyproject.toml  setup.py  test.py  tests.py
.github/: FUNDING.yml
.github/workflows/: main.yml  test.yml
docs/: conf.py  index.rst
jsonref/: __init__.py
tests/: test_api.py  test_json_loader.py  test_jsonref.py  test_jsonref_errors.py  test_proxies.py  test_urn.py
