[project]
name = "jsonref"
description = "jsonref is a library for automatic dereferencing of JSON Reference objects for Python."
authors = [
    {name = "Chase Sterling", email = "chase.sterling@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.3"
dependencies = []

[project.urls]
repository = "https://github.com/gazpachoking/jsonref"
documentation = "https://jsonref.readthedocs.io/en/latest/"

[tool.pdm.dev-dependencies]
test = ["pytest>=7.1.3"]

[tool.pdm]
version = { source = "file", path = "jsonref.py" }
[tool.pdm.build]
includes = ["jsonref.py", "proxytypes.py"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

