[project]
name = "jsonref"
description = "jsonref is a library for automatic dereferencing of JSON Reference objects for Python."
authors = [{ name = "Chase Sterling", email = "chase.sterling@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = []

[project.urls]
repository = "https://github.com/gazpachoking/jsonref"
documentation = "https://jsonref.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = ["pytest>=7.1.3", "flake8>=5.0.4", "black>=23.3.0"]

[tool.pdm]
version = { source = "file", path = "jsonref/__init__.py" }

[tool.pdm.build]
includes = ["jsonref"]
excludes = ["tests", "docs"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
